[project]
name = "sed_plume"
requires-python = ">=3.10"
description = "A hypopycnal sediment-carrying plume entering the ocean."
keywords = [
    "bmi",
    "hypopycnal plume",
    "landlab",
    "sediment",
]
authors = [
    { email = "mcflugen@gmail.com" },
    { name = "Eric Hutton" },
]
maintainers = [
    { email = "mcflugen@gmail.com" },
    { name = "Eric Hutton" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "landlab>=2.0.0b7",
    "numpy",
    "packaging",
    "pyyaml",
    "rich-click",
    "scipy",
    "tomlkit",
]
dynamic = [
    "readme",
    "version",
]

[project.license]
text = "MIT"

[project.urls]
changelog = "https://github.com/mcflugen/plume/blob/main/CHANGES.rst"
documentation = "https://github.com/mcflugen/plume/blob/main/README.rst"
homepage = "https://github.com/csdms"
repository = "https://github.com/mflugen/plume"

[project.optional-dependencies]
dev = [
    "nox",
]
testing = [
    "coveralls",
    "hypothesis",
    "nbmake",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
    "pytest-xdist",
    "pyyaml",
]
notebook = [
    "notebook",
]

[project.scripts]
plume = "plume.cli:plume"

[build-system]
requires = [
    "cython",
    "cythongsl",
    "numpy",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.readme]
file = "README.rst"
content-type = "text/x-rst"

[tool.setuptools.dynamic.version]
attr = "plume._version.__version__"

[tool.setuptools.package-data]
plume = [
    "**/*.pyx",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/plume",
    "tests",
]
norecursedirs = [
    ".*",
    "*.egg*",
    "build",
    "dist",
    "examples",
]
addopts = [
    "--ignore=setup.py",
    "--tb=native",
    "--strict",
    "--durations=16",
    "--doctest-modules",
    "-vvv",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
]

[tool.towncrier]
directory = "news"
package = "plume"
filename = "CHANGES.rst"
single_file = true
underlines = "-`^"
issue_format = "`#{issue} <https://github.com/mcflugen/plume/issues/{issue}>`_"
title_format = "{version} ({project_date})"
type = [
    { directory = "feature", name = "New Features", showcontent = true },
    { directory = "bugfix", name = "Bug Fixes", showcontent = true },
    { directory = "docs", name = "Documentation Enhancements", showcontent = true },
    { directory = "misc", name = "Other Changes and Additions", showcontent = true },
]
